# Comfy-PR

./: .env  .env.production  .env.test  .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  README.md  bun.lockb  bypass.yaml  csv-query.js  db.sqlite  docker-compose.mongodb.yml  docker-compose.yml  entry.sh  index.ts  lefthook.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.github/workflows/: comfy-pr.yaml  pr.yaml  test.yaml
.storybook/: main.ts
app/: DownloadButton.tsx  globals.css  layout.tsx  page.tsx
app/(dashboard)/: Details.tsx  DetailsTable.tsx  PullsStatusTable.stories.tsx  (+7 more)
components/: CodeEditor.tsx
docs/: gmail-sender.md
mocks/: mockPublishedNodes.ts
scripts/: REPO_CLEAN.ts  gh.ts
src/: $flatten.ts  Authors.ts  AwaitedReturnType.ts  CMNodes.ts  CNPulls-bak.ts  CNRepos.ts  CRNodes.ts  CRPulls.ts  ComfyRegistryPRs.ts  EmailTasks.ts  FORK_OWNER.ts  FORK_PREFIX.ts  FollowRules.ts  GIT_USEREMAIL.ts  GIT_USERNAME.ts  GithubIssueComments.ts  Link.ts  PushedBranch.ts  SlackActions.ts  SlackMsgs.ts  SlackNotifications.ts  Task.ts  Totals.ts  TrackingPRs.ts  Worker.ts  WorkerInstances.ts  addCommentAction.ts  analyzeCRPullsDetails.ts  analyzePullsStatus.ts  analyzeTotals.test.ts  analyzeTotals.ts  bypassRepos.ts  checkComfyActivated.ts  checkPRsFailures.ts  checkRepoPRStatus.ts  cli.ts  clone_modify_push_Branches.ts  createComfyRegistryPRsFromCandidates.ts  createComfyRegistryPullRequests.ts  createGithubFork.ts  (+81 more)
templates/: add-action.md  add-toml.md  follow-rules.yaml  update-toml-license.md
(+79 files in other folders)
